--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "http-proxy-middleware": "^2.0.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "react": "^16.8.3",
@@ -16,6 +15,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
+ "proxy": "https://twitter-web-app-05.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
