--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=OKAKJSBDAJHVDFWMFBWEKFBEJFBEJBFKHWEISJDJD
 PORT=3002
 NODE_ENV=DEVELOPMENT
+MONGO_URL=mongodb://ashishbansal:sx6k6q26biWFbdW@cluster0-shard-00-00.dd7nn.mongodb.net:27017,cluster0-shard-00-01.dd7nn.mongodb.net:27017,cluster0-shard-00-02.dd7nn.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-u92eo8-shard-0&authSource=admin&retryWrites=true&w=majority
