--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/DeepanshuGOYAL05/Twitter-Like-website/issues"
   },
-  "homepage": "https://github.com/DeepanshuGOYAL05/Twitter-Like-website#readme"
+  "homepage": "https://github.com/DeepanshuGOYAL05/Twitter-Like-website#readme",
+  "dependencies": {
+    
+    "dotenv": "^5.0.1"
+   
+  }
 }
